--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>EGMS Gazette</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style.css">
-<script src="script.js"></script>
+<script src="main.js"></script>
 
 </head>
 <body>
@@ -137,3 +137,4 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
