--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EGMS Gazette</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
-<script src="main.js"></script>
 
 </head>
 <body>
@@ -134,7 +132,9 @@
 </footer>
 
 
-    <script src="js/main.js"></script>
+    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
+
 
