--- a/community.html
+++ b/community.html
@@ -25,7 +25,7 @@
     <main>
         <section>
             <h2>Local & School Community</h2>
-            <p>Тут будуть події у містечку та для учнів...</p>
+            <p>Here is will be some events in school/community...</p>
         </section>
     </main>
 
@@ -40,3 +40,4 @@
 
 </body>
 </html>
+
