--- a/knowledge.html
+++ b/knowledge.html
@@ -25,7 +25,7 @@
     <main>
         <section>
             <h2>Puzzles & Fun Facts</h2>
-            <p>Тут будуть загадки, головоломки та цікаві факти...</p>
+            <p>Here is will be some interesting facts/puzzles/etc....</p>
         </section>
     </main>
 
@@ -40,3 +40,4 @@
 
 </body>
 </html>
+
