--- a/media.html
+++ b/media.html
@@ -25,7 +25,7 @@
     <main>
         <section>
             <h2>Gallery & Memes</h2>
-            <p>Тут будуть фотки, комікси та меми від учнів...</p>
+            <p>Here will be some pictures, comixes and memes from students/school...</p>
         </section>
     </main>
 <footer>
@@ -39,3 +39,4 @@
 
 </body>
 </html>
+
