--- a/news.html
+++ b/news.html
@@ -26,7 +26,7 @@
     <main>
         <section>
             <h2>School News</h2>
-            <p>Тут будуть новини школи...</p>
+            <p>Here will be some news in school...</p>
         </section>
     </main>
 
@@ -41,3 +41,4 @@
 
 </body>
 </html>
+
