--- a/voices.html
+++ b/voices.html
@@ -25,7 +25,7 @@
     <main>
         <section>
             <h2>Student Articles & Interviews</h2>
-            <p>Тут будуть статті, інтерв’ю, думки учнів...</p>
+            <p>Here is will be some thoughts/disscusions/ideas from students...</p>
         </section>
     </main>
 
@@ -40,3 +40,4 @@
 
 </body>
 </html>
+
