--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EGMS Gazette</title>
+    <title>EGMS Newspaper</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -13,7 +13,7 @@
       <div class="top-bar">
         <div class="brand">
           <img src="https://i.postimg.cc/L4tYwzw3/image.png" alt="School Symbol" class="logo">
-          <h1>EGMS GAZZETE</h1>
+          <h1>EGMS NEWSPAPER</h1>
         </div>
         <nav>
           <a href="index.html">Home</a>
@@ -136,5 +136,6 @@
     <script src="main.js"></script>
 </body>
 </html>
+
 
 
