--- a/facts.html
+++ b/facts.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Past Facts - EGMS GAZZETE</title>
+  <title>Past Facts - EGMS NEWSPAPER</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div class="top-bar">
       <div class="brand">
         <img src="https://i.postimg.cc/L4tYwzw3/image.png" alt="School Symbol" class="logo">
-        <h1>EGMS GAZZETE</h1>
+        <h1>EGMS NEWSPAPER</h1>
       </div>
       <nav>
         <a href="index.html">Home</a>
@@ -64,3 +64,4 @@
 
 </body>
 </html>
+
