--- a/calendar.html
+++ b/calendar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EGMS Gazette - Full Calendar</title>
+  <title>EGMS NEWSPAPER - Full Calendar</title>
   <link rel="stylesheet" href="style.css">
   <style>
     /* Додаткове стилізування iframe для адаптивності */
@@ -42,7 +42,7 @@
     <div class="top-bar">
       <div class="brand">
         <img src="https://i.postimg.cc/L4tYwzw3/image.png" alt="School Symbol" class="logo">
-        <h1>EGMS GAZZETE</h1>
+        <h1>EGMS NEWSPAPER</h1>
       </div>
       <nav>
         <a href="index.html">Home</a>
@@ -79,3 +79,4 @@
 
 </body>
 </html>
+
