--- a/article.html
+++ b/article.html
@@ -13,7 +13,7 @@
       <div class="top-bar">
         <div class="brand">
           <img src="https://i.postimg.cc/L4tYwzw3/image.png" alt="School Symbol" class="logo">
-          <h1>EGMS GAZZETE</h1>
+          <h1>EGMS NEWSPAPER</h1>
         </div>
         <nav>
           <a href="index.html">Home</a>
@@ -52,3 +52,4 @@
 
 </body>
 </html>
+
