--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News - EGMS Gazette</title>
+    <title>News - EGMS NEWSPAPER</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <header>
         <div class="top-bar">
             <img src="symbol.png" alt="School Symbol" class="logo">
-            <h1>EGMS Gazette</h1>
+            <h1>EGMS NEWSPAPER</h1>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="news.html">News</a>
@@ -41,4 +41,5 @@
 
 </body>
 </html>
+
 
