--- a/voices.html
+++ b/voices.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Voices - EGMS Gazette</title>
+    <title>Student Voices - EGMS NEWSPAPER</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="top-bar">
             <img src="symbol.png" alt="School Symbol" class="logo">
-            <h1>EGMS Gazette</h1>
+            <h1>EGMS NEWSPAPER</h1>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="news.html">News</a>
@@ -40,4 +40,5 @@
 
 </body>
 </html>
+
 
