--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EGMS Newspaper</title>
+    <title>EGMS Gazette</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
 
 </head>
 <body>
@@ -13,7 +15,7 @@
       <div class="top-bar">
         <div class="brand">
           <img src="https://i.postimg.cc/L4tYwzw3/image.png" alt="School Symbol" class="logo">
-          <h1>EGMS NEWSPAPER</h1>
+          <h1>EGMS GAZZETE</h1>
         </div>
         <nav>
           <a href="index.html">Home</a>
@@ -29,6 +31,95 @@
         <p>Be Kind, Be Safe, Be Responsible</p>
       </div>
     </header>
+
+    <!-- Join the Team Section -->
+<!-- Modal -->
+<!-- Join the Team Section -->
+<section class="section-box" id="join-team">
+  <h2 class="section-title">Join the Team / Submit Your Idea</h2>
+  <p class="section-subtitle">Have an idea for the Gazette or want to join our team? Submit it below!</p>
+  <button class="fun-btn" id="open-join-btn">Submit Your Idea</button>
+</section>
+
+<!-- Modal -->
+<!-- Modal -->
+<div id="join-modal" class="modal modal-large">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h3>Submit Your Idea</h3>
+    <p>We’d love to hear from you! Join our team or suggest an idea for the Gazette.</p>
+<form id="join-form">
+  <label for="name">Your Name</label>
+  <input type="text" id="name" name="name" required>
+
+  <label for="email">Your Email</label>
+  <input type="email" id="email" name="email" required>
+
+  <label for="idea">Your Idea / Role</label>
+  <textarea id="idea" name="idea" required></textarea>
+
+  <button type="submit">Submit</button>
+</form>
+<p id="form-message"></p>
+
+
+
+    <p id="form-message"></p>
+  </div>
+</div>
+
+
+
+
+<script>
+// Modal
+const openBtn = document.getElementById('open-join-btn');
+const modal = document.getElementById('join-modal');
+const closeBtn = modal.querySelector('.close');
+const form = document.getElementById('join-form'); // переконайся, що форма має id="join-form"
+const message = document.getElementById('form-message');
+
+openBtn.addEventListener('click', () => modal.style.display = 'block');
+closeBtn.addEventListener('click', () => modal.style.display = 'none');
+window.addEventListener('click', (e) => {
+  if(e.target === modal) modal.style.display = 'none';
+});
+
+// Form submit
+document.getElementById('join-form').addEventListener('submit', async function(e) {
+  e.preventDefault();
+
+  const form = e.target;
+  const message = document.getElementById('form-message');
+  const url = 'https://script.google.com/macros/s/AKfycbzx5Rie5AI_MSVkE37BNbL_5yGhXQb1ftOdMr_S7cOJqH-FP_LXXJ9tvARNpG2lRQD-5Q/exec';
+
+  const formData = new FormData(form);
+  const data = new URLSearchParams();
+
+  formData.forEach((value, key) => {
+    data.append(key, value);
+  });
+
+  try {
+    const response = await fetch(url, {
+      method: 'POST',
+      body: data
+    });
+
+    const result = await response.json();
+    if (result.result === 'success') {
+      message.textContent = 'Thank you! Your idea has been submitted 🎉';
+      form.reset();
+    } else {
+      message.textContent = 'Error submitting form. Please try again.';
+    }
+  } catch (error) {
+    message.textContent = 'Error submitting form. Please try again.';
+    console.error(error);
+  }
+});
+
+</script>
 
     <!-- Main Content -->
     <main>
@@ -54,18 +145,6 @@
                 <button class="next">&gt;</button>
             </div>
         </section>
-
-        <section class="section-box" id="poll-week">
-  <h2 class="section-title">Poll of the Week</h2>
-  <p class="poll-question">Which do you prefer: Tea or Coffee?</p>
-
-  <div class="poll-options">
-    <button class="poll-btn" data-choice="Tea">Tea</button>
-    <button class="poll-btn" data-choice="Coffee">Coffee</button>
-  </div>
-
-  <div id="poll-result"></div>
-</section>
 
         <!-- Featured Article -->
 <section class="section-box two-column">
@@ -106,6 +185,21 @@
   </div>
 </section>
 
+<section class="section-box" id="poll-week">
+  <h2 class="section-title">Poll of the Week</h2>
+  <p class="poll-question">Which do you prefer: Tea or Coffee?</p>
+
+  <div class="poll-options">
+    <button class="poll-btn" data-choice="Tea">Tea</button>
+    <button class="poll-btn" data-choice="Coffee">Coffee</button>
+  </div>
+
+  <div id="poll-result"></div>
+</section>
+
+
+
+
 
         <!-- Media Gallery -->
         <section class="section-box" id="media-gallery">
@@ -129,11 +223,6 @@
 </footer>
 
 
-    <script src="script.js"></script>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
-
-
-
-
