--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="top-bar">
         <div class="brand">
           <img src="https://i.postimg.cc/L4tYwzw3/image.png" alt="School Symbol" class="logo">
-          <h1>EGMS GAZZETE</h1>
+          <h1>EGMS Newspaper</h1>
         </div>
         <nav>
           <a href="index.html">Home</a>
@@ -226,4 +226,5 @@ document.getElementById('join-form').addEventListener('submit', async function(e
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
