--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EGMS Gazette</title>
+    <title>EGMS Newspaper</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
@@ -15,7 +15,7 @@
       <div class="top-bar">
         <div class="brand">
           <img src="https://i.postimg.cc/L4tYwzw3/image.png" alt="School Symbol" class="logo">
-          <h1>EGMS GAZZETE</h1>
+          <h1>EGMS Newspaper</h1>
         </div>
         <nav>
           <a href="index.html">Home</a>
@@ -226,3 +226,4 @@ document.getElementById('join-form').addEventListener('submit', async function(e
     <script src="js/main.js"></script>
 </body>
 </html>
+
