--- a/index.html
+++ b/index.html
@@ -35,11 +35,6 @@
     <!-- Join the Team Section -->
 <!-- Modal -->
 <!-- Join the Team Section -->
-<section class="section-box" id="join-team">
-  <h2 class="section-title">Join the Team / Submit Your Idea</h2>
-  <p class="section-subtitle">Have an idea for the Gazette or want to join our team? Submit it below!</p>
-  <button class="fun-btn" id="open-join-btn">Submit Your Idea</button>
-</section>
 
 <!-- Modal -->
 <!-- Modal -->
@@ -210,6 +205,13 @@ document.getElementById('join-form').addEventListener('submit', async function(e
                 <img src="https://via.placeholder.com/150" alt="Sample Image">
             </div>
         </section>
+
+        <section class="section-box" id="join-team">
+  <h2 class="section-title">Join the Team / Submit Your Idea</h2>
+  <p class="section-subtitle">Have an idea for the newspaper or want to join our team? Submit it below!</p>
+  <button class="fun-btn" id="open-join-btn">Submit Your Idea</button>
+</section>
+        
     </main>
 
     <!-- Footer -->
@@ -226,4 +228,5 @@ document.getElementById('join-form').addEventListener('submit', async function(e
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
