--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ document.getElementById('join-form').addEventListener('submit', async function(e
   <div class="half-box" id="featured-article">
       <h2 class="section-title">Article of the Week</h2>
       <div class="article">
-          <h3 class="section-subtitle">What Are Black Holes?</h3>
-          <p>A black hole is a region in space where gravity is so powerful that nothing—not even light—can escape its pull...</p>
+          <h3 class="section-subtitle">The Power of Small Acts</h3>
+          <p>In a world that often feels fast, loud, and overwhelming, it’s easy to forget how powerful small actions can be. We tend to think...</p>
           <button class="read-more">Read More</button>
       </div>
   </div>
@@ -157,7 +157,7 @@ document.getElementById('join-form').addEventListener('submit', async function(e
   <div class="half-box" id="fun-facts">
       <h2 class="section-title">Did You Know?</h2>
       <div class="fun-box">
-          <p class="section-subtitle">kinda fact over there</p>
+          <p class="section-subtitle">Bananas are berries — but strawberries aren’t!</p>
           <button class="fun-btn" id="fun-btn">Past Facts</button>
       </div>
   </div>
@@ -228,5 +228,6 @@ document.getElementById('join-form').addEventListener('submit', async function(e
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
