--- a/article.html
+++ b/article.html
@@ -32,33 +32,32 @@
     </header>
 
     <!-- Main Article Content -->
-<main>
-  <section>
-    <h2 class="section-title">Article of the Week: What Are Black Holes?</h2>
+<h2 class="section-title">Article of the Week: What Are Black Holes?</h2>
 
-    <p>
-      Black holes are regions in space where gravity is so strong that nothing — not even light — can escape.
-      They form when massive stars collapse at the end of their life cycles, creating a point of infinite density
-      called a singularity. Around this point lies the event horizon, the “no return” boundary beyond which
-      everything is pulled inward forever.
-    </p>
-    <p>
-      Despite their ominous name, black holes play an important role in shaping galaxies and regulating the birth of stars.
-      Astronomers believe that most galaxies, including our own Milky Way, have a supermassive black hole at their center.
-      These cosmic giants can be millions or even billions of times more massive than our Sun.
-    </p>
-    <p>
-      In 2019, the Event Horizon Telescope captured the first-ever image of a black hole — a groundbreaking moment in science.
-      The photograph showed a glowing ring of hot gas surrounding the dark shadow of the black hole at the center of the galaxy M87.
-      This confirmed decades of theoretical predictions from Einstein’s general relativity.
-    </p>
-    <p>
-      Today, scientists continue to study black holes to uncover secrets about gravity, space-time, and even
-      the origins of our universe. Who knows — understanding black holes might one day reveal how everything began.
-    </p>
-    <p><em>Written by EGMS Science Club • October 2025</em></p>
-  </section>
-</main>
+<article class="main-article">
+  <p>
+    Black holes are regions in space where gravity is so strong that nothing — not even light — can escape.
+    They form when massive stars collapse at the end of their life cycles, creating a point of infinite density
+    called a singularity. Around this point lies the event horizon, the “no return” boundary beyond which
+    everything is pulled inward forever.
+  </p>
+  <p>
+    Despite their ominous name, black holes play an important role in shaping galaxies and regulating the birth of stars.
+    Astronomers believe that most galaxies, including our own Milky Way, have a supermassive black hole at their center.
+    These cosmic giants can be millions or even billions of times more massive than our Sun.
+  </p>
+  <p>
+    In 2019, the Event Horizon Telescope captured the first-ever image of a black hole — a groundbreaking moment in science.
+    The photograph showed a glowing ring of hot gas surrounding the dark shadow of the black hole at the center of the galaxy M87.
+    This confirmed decades of theoretical predictions from Einstein’s general relativity.
+  </p>
+  <p>
+    Today, scientists continue to study black holes to uncover secrets about gravity, space-time, and even
+    the origins of our universe. Who knows — understanding black holes might one day reveal how everything began.
+  </p>
+
+  <p class="article-footer"><em>Written by EGMS Science Club • October 2025</em></p>
+</article>
 
 
 
@@ -73,5 +72,6 @@
 
 </body>
 </html>
+
 
 
