--- a/article.html
+++ b/article.html
@@ -32,7 +32,7 @@
     </header>
 
     <!-- Main Article Content -->
-<h2 class="section-title">Article of the Week: What Are Black Holes?</h2>
+<h2 class="section-title article-title">Article of the Week: What Are Black Holes?</h2>
 
 <article class="main-article">
   <p>
@@ -72,6 +72,7 @@
 
 </body>
 </html>
+
 
 
 
