--- a/index.html
+++ b/index.html
@@ -206,11 +206,91 @@ document.getElementById('join-form').addEventListener('submit', async function(e
             </div>
         </section>
 
-        <section class="section-box" id="join-team">
+<section class="section-box" id="join-team">
   <h2 class="section-title">Join the Team / Submit Your Idea</h2>
-  <p class="section-subtitle">Have an idea for the newspaper or want to join our team? Submit it below!</p>
+  <p class="section-subtitle">Have an idea for the Gazette or want to join our team? Submit it below!</p>
   <button class="fun-btn" id="open-join-btn">Submit Your Idea</button>
 </section>
+
+<!-- Modal -->
+<!-- Modal -->
+<div id="join-modal" class="modal modal-large">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h3>Submit Your Idea</h3>
+    <p>We’d love to hear from you! Join our team or suggest an idea for the Gazette.</p>
+<form id="join-form">
+  <label for="name">Your Name</label>
+  <input type="text" id="name" name="name" required>
+
+  <label for="email">Your Email</label>
+  <input type="email" id="email" name="email" required>
+
+  <label for="idea">Your Idea / Role</label>
+  <textarea id="idea" name="idea" required></textarea>
+
+  <button type="submit">Submit</button>
+</form>
+<p id="form-message"></p>
+
+
+
+    <p id="form-message"></p>
+  </div>
+</div>
+
+
+
+
+<script>
+// Modal
+const openBtn = document.getElementById('open-join-btn');
+const modal = document.getElementById('join-modal');
+const closeBtn = modal.querySelector('.close');
+const form = document.getElementById('join-form'); // переконайся, що форма має id="join-form"
+const message = document.getElementById('form-message');
+
+openBtn.addEventListener('click', () => modal.style.display = 'block');
+closeBtn.addEventListener('click', () => modal.style.display = 'none');
+window.addEventListener('click', (e) => {
+  if(e.target === modal) modal.style.display = 'none';
+});
+
+// Form submit
+document.getElementById('join-form').addEventListener('submit', async function(e) {
+  e.preventDefault();
+
+  const form = e.target;
+  const message = document.getElementById('form-message');
+  const url = 'https://script.google.com/macros/s/AKfycbzx5Rie5AI_MSVkE37BNbL_5yGhXQb1ftOdMr_S7cOJqH-FP_LXXJ9tvARNpG2lRQD-5Q/exec';
+
+  const formData = new FormData(form);
+  const data = new URLSearchParams();
+
+  formData.forEach((value, key) => {
+    data.append(key, value);
+  });
+
+  try {
+    const response = await fetch(url, {
+      method: 'POST',
+      body: data
+    });
+
+    const result = await response.json();
+    if (result.result === 'success') {
+      message.textContent = 'Thank you! Your idea has been submitted 🎉';
+      form.reset();
+    } else {
+      message.textContent = 'Error submitting form. Please try again.';
+    }
+  } catch (error) {
+    message.textContent = 'Error submitting form. Please try again.';
+    console.error(error);
+  }
+});
+
+</script>
         
     </main>
 
@@ -228,6 +308,7 @@ document.getElementById('join-form').addEventListener('submit', async function(e
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
