--- a/index.html
+++ b/index.html
@@ -243,51 +243,39 @@ document.getElementById('join-form').addEventListener('submit', async function(e
 
 
 <script>
-// Modal
-const openBtn = document.getElementById('open-join-btn');
-const modal = document.getElementById('join-modal');
-const closeBtn = modal.querySelector('.close');
-const form = document.getElementById('join-form'); // переконайся, що форма має id="join-form"
-const message = document.getElementById('form-message');
-
-openBtn.addEventListener('click', () => modal.style.display = 'block');
-closeBtn.addEventListener('click', () => modal.style.display = 'none');
-window.addEventListener('click', (e) => {
-  if(e.target === modal) modal.style.display = 'none';
-});
-
-// Form submit
-document.getElementById('join-form').addEventListener('submit', async function(e) {
-  e.preventDefault();
-
-  const form = e.target;
+document.addEventListener('DOMContentLoaded', () => {
+  const openBtn = document.getElementById('open-join-btn');
+  const modal = document.getElementById('join-modal');
+  const closeBtn = modal.querySelector('.close');
+  const form = document.getElementById('join-form');
   const message = document.getElementById('form-message');
-  const url = 'https://script.google.com/macros/s/AKfycbzx5Rie5AI_MSVkE37BNbL_5yGhXQb1ftOdMr_S7cOJqH-FP_LXXJ9tvARNpG2lRQD-5Q/exec';
 
-  const formData = new FormData(form);
-  const data = new URLSearchParams();
-
-  formData.forEach((value, key) => {
-    data.append(key, value);
+  openBtn.addEventListener('click', () => modal.style.display = 'block');
+  closeBtn.addEventListener('click', () => modal.style.display = 'none');
+  window.addEventListener('click', (e) => {
+    if (e.target === modal) modal.style.display = 'none';
   });
 
-  try {
-    const response = await fetch(url, {
-      method: 'POST',
-      body: data
-    });
+  form.addEventListener('submit', async function(e) {
+    e.preventDefault();
+    const url = 'https://script.google.com/macros/s/AKfycbzx5Rie5AI_MSVkE37BNbL_5yGhXQb1ftOdMr_S7cOJqH-FP_LXXJ9tvARNpG2lRQD-5Q/exec';
 
-    const result = await response.json();
-    if (result.result === 'success') {
-      message.textContent = 'Thank you! Your idea has been submitted 🎉';
-      form.reset();
-    } else {
+    const formData = new FormData(form);
+    const data = new URLSearchParams();
+    formData.forEach((value, key) => data.append(key, value));
+
+    try {
+      const response = await fetch(url, { method: 'POST', body: data });
+      const result = await response.json();
+      message.textContent = result.result === 'success'
+        ? 'Thank you! Your idea has been submitted 🎉'
+        : 'Error submitting form. Please try again.';
+      if (result.result === 'success') form.reset();
+    } catch (error) {
       message.textContent = 'Error submitting form. Please try again.';
+      console.error(error);
     }
-  } catch (error) {
-    message.textContent = 'Error submitting form. Please try again.';
-    console.error(error);
-  }
+  });
 });
 
 </script>
@@ -308,6 +296,7 @@ document.getElementById('join-form').addEventListener('submit', async function(e
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
