--- a/index.html
+++ b/index.html
@@ -57,6 +57,34 @@
             </div>
         </section>
 
+        <!-- Upcoming Events Section -->
+<section class="section-box" id="upcoming-events">
+  <h2 class="section-title">Upcoming Events</h2>
+  <div class="events-grid">
+    <div class="event-card">
+      <div class="event-date">Oct 25</div>
+      <h3 class="event-title">Halloween Spirit Week</h3>
+      <p class="event-desc">Join us for costume contests and themed activities all week long!</p>
+    </div>
+    <div class="event-card">
+      <div class="event-date">Nov 3</div>
+      <h3 class="event-title">Fall Sports Awards</h3>
+      <p class="event-desc">Celebrate the amazing achievements of our fall sports teams.</p>
+    </div>
+    <div class="event-card">
+      <div class="event-date">Nov 15</div>
+      <h3 class="event-title">STEM Night</h3>
+      <p class="event-desc">Hands-on experiments, student projects, and science fun for everyone.</p>
+    </div>
+    <div class="event-card">
+      <div class="event-date">Dec 10</div>
+      <h3 class="event-title">Winter Concert</h3>
+      <p class="event-desc">An evening of beautiful music performed by our talented students.</p>
+    </div>
+  </div>
+</section>
+
+
         <!-- Featured Article -->
 <section class="section-box two-column">
   <!-- Article of the Week -->
@@ -212,6 +240,7 @@ document.addEventListener('DOMContentLoaded', () => {
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
