--- a/index.html
+++ b/index.html
@@ -237,9 +237,10 @@ document.addEventListener('DOMContentLoaded', () => {
 </footer>
 
 
-    <script src="js/main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
