--- a/index.html
+++ b/index.html
@@ -34,27 +34,26 @@
     <!-- Main Content -->
     <main>
         <!-- Top News -->
-        <section class="section-box" id="top-news">
-            <h2 class="section-title">Recent News</h2>
-            <div class="news-carousel">
-                <button class="prev">&lt;</button>
-                <div class="news-slide">
-                    <div class="news-card">
-                        <img src="https://i.postimg.cc/2jhkX2s0/image.png" alt="News 1">
-                        <h3 class="section-subtitle">Basketball team wins championship!</h3>
-                    </div>
-                    <div class="news-card">
-                        <img src="https://i.postimg.cc/Dwy70F8N/image.png" alt="News 2">
-                        <h3 class="section-subtitle">School talent show this Friday!</h3>
-                    </div>
-                    <div class="news-card">
-                        <img src="https://i.postimg.cc/90YjXNVV/image.png" alt="News 3">
-                        <h3 class="section-subtitle">New Science Club starts next week!</h3>
-                    </div>
-                </div>
-                <button class="next">&gt;</button>
+<section class="section-box" id="top-news">
+    <h2 class="section-title">Recent News</h2>
+    <div class="news-carousel auto-scroll">
+        <div class="news-slide">
+            <div class="news-card">
+                <img src="https://i.postimg.cc/KzVwYJKH/HALLOWEEN-SPIRIT-WEEK-1.png" alt="News 1">
+                <h3 class="section-subtitle">Spirit Week Soon!</h3>
             </div>
-        </section>
+            <div class="news-card">
+                <img src="https://i.postimg.cc/KzVwYJKH/HALLOWEEN-SPIRIT-WEEK-1.png" alt="News 2">
+                <h3 class="section-subtitle">School talent show this Friday!</h3>
+            </div>
+            <div class="news-card">
+                <img src="https://i.postimg.cc/KzVwYJKH/HALLOWEEN-SPIRIT-WEEK-1.png" alt="News 3">
+                <h3 class="section-subtitle">New Science Club starts next week!</h3>
+            </div>
+        </div>
+    </div>
+</section>
+
 
         <!-- Upcoming Events Section -->
 <section class="section-box" id="upcoming-events">
@@ -239,6 +238,7 @@ document.addEventListener('DOMContentLoaded', () => {
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
