--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
     <div class="news-carousel auto-scroll">
         <div class="news-slide">
             <div class="news-card">
-                <img src="https://i.postimg.cc/KzVwYJKH/HALLOWEEN-SPIRIT-WEEK-1.png" alt="News 1">
+                <img src="https://i.postimg.cc/GmL4KQ2Z/4.png" alt="News 1">
                 <h3 class="section-subtitle">Spirit Week Soon!</h3>
             </div>
             <div class="news-card">
-                <img src="https://i.postimg.cc/KzVwYJKH/HALLOWEEN-SPIRIT-WEEK-1.png" alt="News 2">
+                <img src="https://i.postimg.cc/GmL4KQ2Z/4.png" alt="News 2">
                 <h3 class="section-subtitle">School talent show this Friday!</h3>
             </div>
             <div class="news-card">
-                <img src="https://i.postimg.cc/KzVwYJKH/HALLOWEEN-SPIRIT-WEEK-1.png" alt="News 3">
+                <img src="https://i.postimg.cc/GmL4KQ2Z/4.png" alt="News 3">
                 <h3 class="section-subtitle">New Science Club starts next week!</h3>
             </div>
         </div>
@@ -237,6 +237,7 @@ document.addEventListener('DOMContentLoaded', () => {
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
