--- a/index.html
+++ b/index.html
@@ -113,6 +113,61 @@
 </section>
 
 
+<section class="section-box" id="election-winners">
+  <h2 class="section-title">Election Winners</h2>
+  <div class="winners-grid">
+    <div class="winner-card">
+      <img src="https://i.postimg.cc/zfxvhzzX/unnamed.jpg" alt="Student Photo" class="winner-photo">
+      <p class="winner-role">Treasure</p>
+      <h3 class="winner-name">Macy B.</h3>
+      <p class="winner-grade">6th Grade</p>
+    </div>
+
+    <div class="winner-card">
+      <img src="https://via.placeholder.com/200" alt="Student Photo" class="winner-photo">
+      <p class="winner-role">Vice President</p>
+      <h3 class="winner-name">Mary N.</h3>
+      <p class="winner-grade">7th Grade</p>
+    </div>
+
+    <div class="winner-card">
+      <img src="https://i.postimg.cc/BnGj977Q/unnamed.jpg" alt="Student Photo" class="winner-photo">
+      <p class="winner-role">Secretary</p>
+      <h3 class="winner-name">Morgan M.</h3>
+      <p class="winner-grade">8th Grade</p>
+    </div>
+  </div>
+</section>
+
+
+<section class="section-box" id="election-winners">
+  <div class="winners-grid">
+    <div class="winner-card">
+      <img src="https://i.postimg.cc/8k9FwzL3/unnamed.jpg" alt="Student Photo" class="winner-photo">
+      <p class="winner-role">Liaison 6th grade</p>
+      <h3 class="winner-name">Maggie</h3>
+      <p class="winner-grade">8th Grade</p>
+    </div>
+
+    <div class="winner-card">
+      <img src="https://via.placeholder.com/200" alt="Student Photo" class="winner-photo">
+      <p class="winner-role">Liaison 7th grade</p>
+      <h3 class="winner-name">Advaith</h3>
+      <p class="winner-grade">7th Grade</p>
+    </div>
+
+    <div class="winner-card">
+      <img src="https://via.placeholder.com/200" alt="Student Photo" class="winner-photo">
+      <p class="winner-role">Liaison 8th grade</p>
+      <h3 class="winner-name">Roma</h3>
+      <p class="winner-grade">8th Grade</p>
+    </div>
+  </div>
+</section>
+
+
+
+
 
 
 
@@ -216,6 +271,7 @@ document.addEventListener('DOMContentLoaded', () => {
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
