--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
 <section class="section-box" id="election-winners">
   <h2 class="section-title">Election Winners</h2>
   <div class="winners-grid">
+          <div class="winner-card">
+      <img src="" alt="Student Photo" class="winner-photo">
+      <p class="winner-role">President</p>
+      <h3 class="winner-name">Swastika G.</h3>
+      <p class="winner-grade">8th Grade</p>
+    </div>
     <div class="winner-card">
       <img src="https://i.postimg.cc/zfxvhzzX/unnamed.jpg" alt="Student Photo" class="winner-photo">
       <p class="winner-role">Treasure</p>
@@ -271,6 +277,7 @@ document.addEventListener('DOMContentLoaded', () => {
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
