--- a/index.html
+++ b/index.html
@@ -38,24 +38,24 @@
   <h2 class="section-title">Upcoming Events</h2>
   <div class="events-grid">
     <div class="event-card">
-      <div class="event-date">Oct 25</div>
+      <div class="event-date">Oct 27</div>
       <h3 class="event-title">Halloween Spirit Week</h3>
       <p class="event-desc">Join us for costume contests and themed activities all week long!</p>
     </div>
     <div class="event-card">
-      <div class="event-date">Nov 3</div>
-      <h3 class="event-title">Fall Sports Awards</h3>
-      <p class="event-desc">Celebrate the amazing achievements of our fall sports teams.</p>
+      <div class="event-date">Oct 28</div>
+      <h3 class="event-title">Rhyme with no reason!</h3>
+      <p class="event-desc">Use all of your creativity to make a rhyme with your friends!</p>
     </div>
     <div class="event-card">
-      <div class="event-date">Nov 15</div>
-      <h3 class="event-title">STEM Night</h3>
-      <p class="event-desc">Hands-on experiments, student projects, and science fun for everyone.</p>
+      <div class="event-date">Oct 29</div>
+      <h3 class="event-title">Pink Out!</h3>
+      <p class="event-desc">Wear any pink clothes!</p>
     </div>
     <div class="event-card">
-      <div class="event-date">Dec 10</div>
-      <h3 class="event-title">Winter Concert</h3>
-      <p class="event-desc">An evening of beautiful music performed by our talented students.</p>
+      <div class="event-date">Oct 30</div>
+      <h3 class="event-title">Teachers and Students Switch!</h3>
+      <p class="event-desc">Dress up like your favourite teacher!</p>
     </div>
   </div>
 </section>
@@ -277,6 +277,7 @@ document.addEventListener('DOMContentLoaded', () => {
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
